Add actions in torrent detail
