# torrent/src/http/openapi_generated_api.go
@@ -1,6 +1,6 @@
 // Package http provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
 package http
 
 import (
@@ -25,6 +25,15 @@ type ServerInterface interface {
 	// Get torrent
 	// (GET /torrents/{infoHash})
 	GetTorrent(w http.ResponseWriter, r *http.Request, infoHash InfoHash)
+	// Cancel torrent
+	// (POST /torrents/{infoHash}/cancel)
+	CancelTorrent(w http.ResponseWriter, r *http.Request, infoHash InfoHash)
+	// Delete torrent
+	// (DELETE /torrents/{infoHash}/delete)
+	DeleteTorrent(w http.ResponseWriter, r *http.Request, infoHash InfoHash)
+	// Start download torrent
+	// (POST /torrents/{infoHash}/download)
+	DownloadTorrent(w http.ResponseWriter, r *http.Request, infoHash InfoHash)
 	// Get torrent file stats
 	// (GET /torrents/{infoHash}/files/{fileIndex}/stats)
 	GetTorrentFileStats(w http.ResponseWriter, r *http.Request, infoHash InfoHash, fileIndex FileIndex)
@@ -64,6 +73,24 @@ func (_ Unimplemented) GetTorrent(w http.ResponseWriter, r *http.Request, infoHa
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
+// Cancel torrent
+// (POST /torrents/{infoHash}/cancel)
+func (_ Unimplemented) CancelTorrent(w http.ResponseWriter, r *http.Request, infoHash InfoHash) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// Delete torrent
+// (DELETE /torrents/{infoHash}/delete)
+func (_ Unimplemented) DeleteTorrent(w http.ResponseWriter, r *http.Request, infoHash InfoHash) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// Start download torrent
+// (POST /torrents/{infoHash}/download)
+func (_ Unimplemented) DownloadTorrent(w http.ResponseWriter, r *http.Request, infoHash InfoHash) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
 // Get torrent file stats
 // (GET /torrents/{infoHash}/files/{fileIndex}/stats)
 func (_ Unimplemented) GetTorrentFileStats(w http.ResponseWriter, r *http.Request, infoHash InfoHash, fileIndex FileIndex) {
@@ -93,6 +120,7 @@ type MiddlewareFunc func(http.Handler) http.Handler
 
 // DropAllTorrents operation middleware
 func (siw *ServerInterfaceWrapper) DropAllTorrents(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
 
 	var err error
 
@@ -115,11 +143,12 @@ func (siw *ServerInterfaceWrapper) DropAllTorrents(w http.ResponseWriter, r *htt
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r)
+	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
 // ListTorrents operation middleware
 func (siw *ServerInterfaceWrapper) ListTorrents(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.ListTorrents(w, r)
@@ -129,11 +158,12 @@ func (siw *ServerInterfaceWrapper) ListTorrents(w http.ResponseWriter, r *http.R
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r)
+	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
 // AddTorrent operation middleware
 func (siw *ServerInterfaceWrapper) AddTorrent(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.AddTorrent(w, r)
@@ -143,18 +173,19 @@ func (siw *ServerInterfaceWrapper) AddTorrent(w http.ResponseWriter, r *http.Req
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r)
+	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
 // GetTorrent operation middleware
 func (siw *ServerInterfaceWrapper) GetTorrent(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -168,18 +199,97 @@ func (siw *ServerInterfaceWrapper) GetTorrent(w http.ResponseWriter, r *http.Req
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r)
+	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
-// GetTorrentFileStats operation middleware
-func (siw *ServerInterfaceWrapper) GetTorrentFileStats(w http.ResponseWriter, r *http.Request) {
+// CancelTorrent operation middleware
+func (siw *ServerInterfaceWrapper) CancelTorrent(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.CancelTorrent(w, r, infoHash)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// DeleteTorrent operation middleware
+func (siw *ServerInterfaceWrapper) DeleteTorrent(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "infoHash" -------------
+	var infoHash InfoHash
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.DeleteTorrent(w, r, infoHash)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// DownloadTorrent operation middleware
+func (siw *ServerInterfaceWrapper) DownloadTorrent(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "infoHash" -------------
+	var infoHash InfoHash
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.DownloadTorrent(w, r, infoHash)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// GetTorrentFileStats operation middleware
+func (siw *ServerInterfaceWrapper) GetTorrentFileStats(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "infoHash" -------------
+	var infoHash InfoHash
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -188,7 +298,7 @@ func (siw *ServerInterfaceWrapper) GetTorrentFileStats(w http.ResponseWriter, r 
 	// ------------- Path parameter "fileIndex" -------------
 	var fileIndex FileIndex
 
-	err = runtime.BindStyledParameterWithOptions("simple", "fileIndex", chi.URLParam(r, "fileIndex"), &fileIndex, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithLocation("simple", false, "fileIndex", runtime.ParamLocationPath, chi.URLParam(r, "fileIndex"), &fileIndex)
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileIndex", Err: err})
 		return
@@ -202,18 +312,19 @@ func (siw *ServerInterfaceWrapper) GetTorrentFileStats(w http.ResponseWriter, r 
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r)
+	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
 // StreamFile operation middleware
 func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -222,7 +333,7 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 	// ------------- Path parameter "fileIndex" -------------
 	var fileIndex FileIndex
 
-	err = runtime.BindStyledParameterWithOptions("simple", "fileIndex", chi.URLParam(r, "fileIndex"), &fileIndex, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithLocation("simple", false, "fileIndex", runtime.ParamLocationPath, chi.URLParam(r, "fileIndex"), &fileIndex)
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileIndex", Err: err})
 		return
@@ -231,7 +342,7 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 	// ------------- Path parameter "fileName" -------------
 	var fileName FileName
 
-	err = runtime.BindStyledParameterWithOptions("simple", "fileName", chi.URLParam(r, "fileName"), &fileName, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithLocation("simple", false, "fileName", runtime.ParamLocationPath, chi.URLParam(r, "fileName"), &fileName)
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "fileName", Err: err})
 		return
@@ -245,18 +356,19 @@ func (siw *ServerInterfaceWrapper) StreamFile(w http.ResponseWriter, r *http.Req
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r)
+	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
 // GetTorrentStats operation middleware
 func (siw *ServerInterfaceWrapper) GetTorrentStats(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
 
 	var err error
 
 	// ------------- Path parameter "infoHash" -------------
 	var infoHash InfoHash
 
-	err = runtime.BindStyledParameterWithOptions("simple", "infoHash", chi.URLParam(r, "infoHash"), &infoHash, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithLocation("simple", false, "infoHash", runtime.ParamLocationPath, chi.URLParam(r, "infoHash"), &infoHash)
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "infoHash", Err: err})
 		return
@@ -270,7 +382,7 @@ func (siw *ServerInterfaceWrapper) GetTorrentStats(w http.ResponseWriter, r *htt
 		handler = middleware(handler)
 	}
 
-	handler.ServeHTTP(w, r)
+	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
 type UnescapedCookieParamError struct {
@@ -397,6 +509,15 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/torrents/{infoHash}", wrapper.GetTorrent)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/torrents/{infoHash}/cancel", wrapper.CancelTorrent)
+	})
+	r.Group(func(r chi.Router) {
+		r.Delete(options.BaseURL+"/torrents/{infoHash}/delete", wrapper.DeleteTorrent)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/torrents/{infoHash}/download", wrapper.DownloadTorrent)
 	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/torrents/{infoHash}/files/{fileIndex}/stats", wrapper.GetTorrentFileStats)
